# spot-match

./: .gitignore  Cargo.toml  README.md
src/: config.rs  config.yaml  date.rs  db_pool.rs  engine.rs  kafka.rs  lib.rs  main.rs  network.rs  order.rs  order_book.rs  spot_log.rs  topic.rs  trade.rs
src/fbs/: mod.rs  order.fbs  order_generated.rs  spot_log.fbs  spot_log_generated.rs  trade.fbs  trade_generated.rs
src/model/: config_symbol_matching.rs  exchange_coin.rs  exchange_order.rs  mod.rs
