[package]
name = "spot-match"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
ordered-float = "4.5.0"
rand = "0.9.0-alpha.2"
log = "0.4.22"
serde_yaml = "0.9.34"
once_cell = "1.20.2"
tklog="0.2.6"
rdkafka = { version = "0.37.0", default-features = true }
tokio-stream = "0.1"
clap = "4.5.20"
futures = "0.3.31"
flatbuffers = "24.3.25"
sqlx = { version = "0.8.2", features = ["mysql", "postgres", "runtime-tokio-native-tls", "macros", "rust_decimal", "chrono"] }
rust_decimal = "1.36.0"
get_if_addrs = "0.5.3"
pnet = "0.35.0"
warp = "0.3.7"
anyhow = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
